--- a/LangChain/LangChain_Testing.ipynb
+++ b/LangChain/LangChain_Testing.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "# SerpAPI for search engine queries\n",
-    "os.environ[\"SERPAPI_API_KEY\"] = \"6d000f9babc9c617854344a947553d8946612c6b94512002f98bdb3bf78511ce\"\n",
+    "os.environ[\"SERPAPI_API_KEY\"] = \"\"\n",
     "\n",
     "# OpenAI\n",
     "os.environ[\"OPENAI_API_KEY\"] = \"\""
